updated register form to include uploadcare, added profile page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,9 +3,9 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">ETC ETC</h1>
+      <h1 class="header center teal-text text-lighten-2">Find your pear</h1>
       <br><br>
     </div>
   </div>
-  <div class="parallax"><img src="/assets/img/banner_home.png"></div>
+  <div class="parallax"><img src="/assets/img/banner-home.png"></div>
 </div>
