--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,8 @@
     <link href="/assets/css/style.css" rel="stylesheet">
     <!--Import materialize.css-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet"/>
+    <script>UPLOADCARE_PUBLIC_KEY = "f2d9934e84f8b4f58c92"</script>
+    <script src="https://ucarecdn.com/libs/widget/3.1.4/uploadcare.full.min.js" charset="utf-8"></script>
   </head>
   <body>
 
