--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,6 +6,11 @@
   <label for="name">Codewars Username</label>
   <input type="text" name="user[username]" placeholder="e.g. codewarrior579823" class="black-text">
 
+  <label for="email">Email</label>
+  <input type="email" name="user[email]" placeholder="e.g. domain@email.com" class="black-text">
+
+  <label for="password">Password</label>
+  <input type="password" name="user[password]" placeholder="Password here" class="black-text">
   <label for="gender">Gender</label><br>
   <input class="with-gap" type="radio" name="user[gender]" value="male" id="chooseGender1" />
   <label for="chooseGender1">Male</label><br>
@@ -14,11 +19,12 @@
 
   <br>
 
-  <label for="email">Email</label>
-  <input type="email" name="user[email]" placeholder="e.g. domain@email.com" class="black-text">
-
-  <label for="password">Password</label>
-  <input type="password" name="user[password]" placeholder="Password here" class="black-text">
+  <label for="image">Profile Photo:</label><br>
+  {{!-- <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" /><br> --}}
+  {{!-- <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" data-public-key="f2d9934e84f8b4f58c92" data-images-only /> --}}
+  <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]"
+         data-images-only="true" />
+  <br>
 
   <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right"></i>
