--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,5 +7,5 @@
       <br><br>
     </div>
   </div>
-  <div class="parallax"><img src="/assets/img/banner-home.png"></div>
+  {{!-- <div class="parallax"><img src="/assets/img/banner-home.png"></div> --}}
 </div>
