resolved bug: form data saving twice. added link to profile page

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -20,10 +20,7 @@
   <br>
 
   <label for="image">Profile Photo:</label><br>
-  {{!-- <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" /><br> --}}
-  {{!-- <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" data-public-key="f2d9934e84f8b4f58c92" data-images-only /> --}}
-  <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]"
-         data-images-only="true" />
+  <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" />
   <br>
 
   <button class="btn waves-effect waves-light" type="submit" name="action">Submit
