--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,8 +33,8 @@
       <div class="navbar-nav">
 
         {{#if user}}
+        <a class="nav-item nav-link" href="/profile">{{user.username}}</a>
         <a class="nav-item nav-link" href="/logout">Logout</a>
-        <a class="nav-item nav-link" href="/profile">{{user.name}}</a>
 
         {{else}}
         <a class="nav-item nav-link" href="/login">Login</a>
