--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,11 @@
 
 <div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
+  <div class="section no-pad-bot hero-div">
     <div class="container">
-      <br><br>
+        <br><br>
       <h1 class="header center teal-text text-lighten-2">Find your pear</h1>
       <br><br>
+      <div class="parallax"><img src="/assets/img/banner-home.png"></div>
     </div>
   </div>
-  {{!-- <div class="parallax"><img src="/assets/img/banner-home.png"></div> --}}
 </div>
