--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
   {{!-- ---------------------------------------------------------------- --}}
 
   <!-- Just an image -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#">PEAR</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
 
 
 
-    <footer class="fixed-bottom">
+    <footer class="footer-color fixed-bottom navbar-dark">
       <div class="container">
         <div class="row">
           <div class="col xl7 l7 s12">
