--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,27 @@
-
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot hero-div">
     <div class="container">
-        <br><br>
+      <br><br>
       <h1 class="header center teal-text text-lighten-2">Find your pear</h1>
       <br><br>
-      <div class="parallax"><img src="/assets/img/banner-home.png"></div>
+      <div class="parallax"><img src="/assets/img/banner-home.png" ></div>
+      <br><br>
+      <button type="button" class="btn btn-info">Info</button>
+      <br><br>
+
+      <div class="container how-to-use">
+        <div class="row">
+          <div class="col-sm">
+            One of three columns
+          </div>
+          <div class="col-sm">
+            One of three columns
+          </div>
+          <div class="col-sm">
+            One of three columns
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
