--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
 
 
 
-    <footer class="footer-color fixed-bottom navbar-dark">
+    <footer class="footer-color navbar-dark">
       <div class="container">
         <div class="row">
           <div class="col xl7 l7 s12">
