added imgs for homepage

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -65,10 +65,10 @@ footer.page-footer {
 }
 
 .hero-div {
-  background-color: #1ABC9C;
+  background-color: #2C3E50;
   text-align: center;
 }
 
 .how-to-use {
-  background-color: #ECF0F1;
+  /*background-color: #ECF0F1;*/
 }
