--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,27 +1,58 @@
-<div id="index-banner" class="parallax-container">
+{{!-- <div id="index-banner" class="parallax-container"> --}}
   <div class="section no-pad-bot hero-div">
-    <div class="container">
+    <div class ="container">
+      <div class="row">
+        <div class="col-sm">
+          <h2>Find your pear!</h2>
+          <p>
+            Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there isn't amny opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location, chat, and set a date to learn together.
+          </p>
+        </div>
+        <div class="col-sm">
+          <img src="/assets/img/pear-outline-filled.png" width="100px" />
+        </div>
+      </div>
+    </div>
+  </div>
+    {{!-- <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">Find your pear</h1>
-      <br><br>
-      <div class="parallax"><img src="/assets/img/banner-home.png" ></div>
-      <br><br>
+      <h3 class="header center teal-text text-lighten-2">Find your pear</h3>
+      {{!-- <br><br> --}}
+      {{!-- <div class="parallax"><img src="/assets/img/banner-home.png" ></div> --}}
+      {{!-- <br><br>
       <button type="button" class="btn btn-info">Info</button>
       <br><br>
+      </div> --}}
 
       <div class="container how-to-use">
         <div class="row">
           <div class="col-sm">
-            One of three columns
+            <div class="tile">
+            <img src="/assets/img/Compas.png" width="80" height="80" class="tile-image big-illustration">
+            <h3 class="tile-title">
+              Set your preferred Locations
+            </h3>
+          </div>
           </div>
           <div class="col-sm">
-            One of three columns
+            <div class="tile">
+            <img src="/assets/img/Chat.png" width="80" height="80" class="tile-image big-illustration">
+            <h3 class="tile-title">
+              Chat with coders in your area
+            </h3>
+          </div>
           </div>
           <div class="col-sm">
-            One of three columns
+            <div class="tile">
+            <img src="/assets/img/Calendar.png" width="80" height="80" class="tile-image big-illustration">
+            <h3 class="tile-title">
+              Set up day and time for a pair programming session!
+            </h3>
+          </div>
           </div>
         </div>
       </div>
 
-    </div>
-  </div>
+
+  {{!-- </div>
+</div> --}}
