--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 
   <!-- Just an image -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">PEAR</a>
+    <a class="navbar-brand" href="/"><img src="/assets/img/pear-outline-filled.png" width="40" height="40" class="d-inline-block align-center" />Pear</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -54,7 +54,7 @@
 
 
 
-    <footer class="footer-color navbar-dark">
+    <footer class="footer-color fixed-bottom navbar-dark">
       <div class="container">
         <div class="row">
           <div class="col xl7 l7 s12">
