added profile handlebar

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,9 +8,9 @@
             Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there isn't amny opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location, chat, and set a date to learn together.
           </p>
         </div>
-        <div class="col-sm">
+        {{!-- <div class="col-sm">
           <img src="/assets/img/pear-outline-filled.png" width="100px" />
-        </div>
+        </div> --}}
       </div>
     </div>
   </div>
