--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,47 +1,19 @@
-<div class="container">
-
-  <br>
-
-  <img src = "{{ user.imageUrl }}" class="img-thumbnail" height="300px">
-
-  <h3>{{ user.username }}</h3>
-
-  <ul>
-    <li>Email: {{ user.email }}</li>
-  </ul>
-
-    <br>
-    <br>
-
-  <h5>Update Profile</h5>
-
-  <form action="/profile/{{ user.id }}?_method=PUT" method="post">
-
-    <input type="hidden" name="slug" value="{{ user.username }}">
-
-    <label for="email">Email</label>
-    <input type="text" name="email" value="{{ user.email }}">
-
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-      <i class="material-icons right"></i>
-    </button>
-
-  </form>
-
-  <br>
-  <br>
-
-  <h5>Delete Profile</h5>
-
-  <form action="/profile/{{ user.id }}?_method=DELETE" method="post">
-
-    <button class="btn waves-effect waves-light" type="submit" name="action">Delete
-      <i class="material-icons right"></i>
-    </button>
-
-  </form>
-
-<br>
-<br>
-
+{{!-- <div class ="container">
+<img src="{{ user.imageUrl }}" class="img-thumbnail" max-width="50px">
+<h3>{{ user.username }}</h3>
+</div>
+ --}}
+<div class ="container">
+<div class="content">
+  <div class="card">
+    <div class="firstinfo"><img src="{{ user.imageUrl }}"/>
+      <div class="profileinfo">
+        <h1>{{ user.username }}</h1>
+        <h3>Python Ninja</h3>
+        <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+      </div>
+    </div>
+  </div>
+  <div class="badgescard"> <span class="devicons devicons-django"></span><span class="devicons devicons-python"> </span><span class="devicons devicons-codepen"></span><span class="devicons devicons-javascript_badge"></span><span class="devicons devicons-gulp"></span><span class="devicons devicons-angular"></span><span class="devicons devicons-sass"> </span></div>
+</div>
 </div>
