added search route

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,7 +13,7 @@
     <br>
     <br>
 
-  <h5>Update Profile</h5>
+  <h5>Update Email</h5>
 
   <form action="/profile/{{ user.id }}?_method=PUT" method="post">
 
@@ -30,6 +30,7 @@
 
   <br>
   <br>
+
 
   <h5>Delete Profile</h5>
 
