pulling search handlebars

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -31,8 +31,8 @@
             Codewar Rank
           </h3>
           <p>{{ user.username }}</p>
-          <p>Honor: 72</p>
-          <p>Kyu: 7</p>
+          <p>{{ user.honor }}</p>
+          <p>Overall Kyu: {{ user.overallKyu }}</p>
         </div>
       </div>
       <div class="col-sm">
