able to render profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,10 +2,12 @@
 
   <br>
 
-  <img src = "{{ user.imageUrl }}" class="img-thumbnail" max-height="200px">
-
 <div class ="icon-profile">
   <div class ="container">
+    <div class="row">
+      <img src = "{{ user.imageUrl }}" class="img-thumbnail" max-height="200px">
+    </div>
+    <br>
     <div class="row">
       <div class="col-sm">
         <div class="tile">
@@ -13,21 +15,21 @@
             Languages
           </h3>
           <div class="container ">
-            <i class="icon-size devicon-javascript-plain colored"></i>
-            <i class="icon-size devicon-ruby-plain colored"></i>
-            <i class="icon-size devicon-rails-plain colored"></i>
-            <i class="icon-size devicon-html5-plain colored"></i>
+            {{#each user.languages}}
+            <p><i class="icon-size devicon-{{@key}}-plain colored"> {{this}}</i></p>
+            {{/each}}
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="tile">
           <h3 class="tile-title">
-            Codewar Rank
+            {{ user.username }}
           </h3>
-          <p>{{ user.username }}</p>
-          <p>{{ user.honor }}</p>
-          <p>Overall Kyu: {{ user.overallKyu }}</p>
+          <p>Codewars Rank</p>
+          <p>Honor : {{ user.honor }}</p>
+          <p>Overall Kyu : {{ user.overallKyu }}</p>
+          <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
         </div>
       </div>
       <div class="col-sm">
@@ -36,38 +38,26 @@
             Code with me at:
           </h3>
           <p>Jurong Point Library</p>
-          <p>Wednesdays and Sundays</p>
-          <p>Evenings</p>
+          <p>{{ user.codewith }}</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="tile">
+          <h3 class="tile-title">
+            My Story :
+          </h3>
+          <div class="container ">
+            <p>{{ user.about }}</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-  <h7>Email: {{ user.email }}</h7><br>
-
-    <br>
-
-  <h7>Honor: {{ user.honor }}</h7><br>
-  <h7>Leaderboard Position: {{ user.leaderboardPosition }}</h7><br>
-  <h7>Overall Kyu: {{ user.overallKyu }}</h7><br>
-
-  <br>
-
-  <h7>Languages</h7>
-  <ul>
-    {{#each user.languages}}
-    <li>{{@key}}: {{this}}</li>
-    {{/each}}
-  </ul>
-
-  <br>
-
-  <h7>About Me: {{ user.about }}</h7><br>
-
-  <br>
-
-  <h5>Update Profile</h5>
+<div class ="container icon-profile">
 
   <form action="/profile/{{ user.id }}?_method=PUT" method="post">
 
@@ -78,8 +68,13 @@
 
     <br>
 
-    <label for="email">About Me:</label><br>
+    <label for="aboutme">About Me:</label><br>
     <input type="text" rows="3" cols="80" name="about" value="{{ user.about }}"><br>
+
+    <br>
+
+    <label for="codewith">Let people know about your available time and days:</label><br>
+    <input type="text" rows="3" cols="80" name="codewith" value="{{ user.codewith }}"><br>
 
     <br>
 
@@ -89,9 +84,9 @@
 
   </form>
 
-  <br>
-  <br>
+</div>
 
+  <div class ="container icon-profile">
   <h5>Delete Profile</h5>
 
   <form action="/profile/{{ user.id }}?_method=DELETE" method="post">
@@ -104,5 +99,5 @@
 
   <br>
   <br>
-
+</div>
 </div>
