--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -22,6 +22,7 @@
 
   <input type="hidden" name="user[about]" value="Add a short introduction of yourself here" class="black-text" />
   <input type="hidden" name="user[codewith]" value="State your available days & timings" class="black-text" />
+  <input type="hidden" name="user[location]" value="Central" class="black-text" />
 
   <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right"></i>
