find and sort users, unablunable to render results on page, saved languages as array

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -57,7 +57,7 @@
   <h7>Languages</h7>
   <ul>
     {{#each user.languages}}
-    <li>{{@key}}: {{this}}</li>
+    <li>{{lang}}: {{kyu}} kyu</li>
     {{/each}}
   </ul>
 
