--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,15 +1,19 @@
 <div class="container">
   <form class="col s12 m6" action="/search" method="post">
-    <label for="language">Language</label>
-    <select class="form-control" id="selectLanguage">
+    <label for="searchLanguage">Search Language: </label>
+    <select name="searchLanguage">
+      <option value="" disabled selected>Please select</option>
       {{#each user.languages}}
-      <option>{{@key}}</option>
+        <option value="{{lang}}">{{lang}}</option>
       {{/each}}
-    </select>
+     </select>
 
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <button class="btn waves-effect waves-light" id="userSearch" type="submit" name="action">Submit
       <i class="material-icons right"></i>
     </button>
-
   </form>
+
+  <div class="userResult">
+
+  </div>
 </div>
