working on search

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -86,6 +86,11 @@
   </select>
 </div>
 
+
+<label for="image">Change Profile Photo:</label><br>
+<input type="text" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" value="{{user.imageUrl}}">
+{{ user.imageUrl }}
+  <br>
     <br>
 
     <label for="email">Update Email address</label><br>
