pulling new search

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -7,12 +7,14 @@
       {{#each user.languages}}
         <option value="{{lang}}">{{lang}}</option>
       {{/each}}
-<<<<<<< HEAD
     </select>
-    <button type="button" class="btn btn-primary" type="submit" name="action">Submit</button>
+    <button class="btn btn-primary" type="submit" name="action">Submit</button>
   </form>
 <br>
 <br>
+<div>
+  {{data}}
+</div>
 
     <div class="card-deck">
       <div class="card">
@@ -21,11 +23,13 @@
           <img src="/assets/img/dayah.jpg" alt="" />
         </div>
         <div class="card-body">
-          <h4 class="card-title">{{user.username}}</h4>
-          {{#each user.languages}}
-          <p class="card-text">{{@key}} : {{this}}</p>
+          <h4 class="card-title"></h4>
+          <ul>
+          {{#each data}}
+          <li><p class="card-text">{{this}}</p></li>
           {{/each}}
-          <p class="card-text">Area : {{user.location}}</p>
+        </ul>
+          <p class="card-text">Area : {{data}}</p>
           <p class="card-text"><small class="text-muted">{{user.codewith}}</small></p>
           <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             More Information
@@ -44,49 +48,11 @@
           </div>
         </div>
 
-        <div class="card">
-          <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
-          <div class="avatar">
-            <img src="/assets/img/dayah.jpg" alt="" />
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">{{user.username}}</h4>
-            {{#each user.languages}}
-            <p class="card-text">{{@key}} : {{this}}</p>
-            {{/each}}
-            <p class="card-text">Area : {{user.location}}</p>
-            <p class="card-text"><small class="text-muted">{{user.codewith}}</small></p>
-            <a data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseOne">
-              More Information
-            </a>
-          </div>
-
-            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-              <div class="card-body">
-                <p>Codewars Rank</p>
-                <p>Honor : {{ user.honor }}</p>
-                <p>Overall Kyu : {{ user.overallKyu }}</p>
-                <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
-                <p>{{ user.about }}</p>
-                <p>{{ user.codewith }}</p>
-              </div>
-            </div>
-          </div>
       </div>
 
 
     </div>
   </div>
-=======
-     </select>
-
-    <button class="btn waves-effect waves-light" id="userSearch" type="submit" name="action">Submit
-      <i class="material-icons right"></i>
-    </button>
-  </form>
-
-  <div class="userResult">
->>>>>>> 8584166f2c6bc74be52a9e067b83beefaf3fd4ab
 
   </div>
 </div>
