--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,8 +37,7 @@
       <div class="navbar-nav">
 
         {{#if user}}
-        <a class="nav-item nav-link" href="/search">Search</a>
-        <a class="nav-item nav-link" href="/pending">Pending</a>
+        <a class="nav-item nav-link" href="/recommendation">Recommendation</a>
         <a class="nav-item nav-link" href="/chat">Chat</a>
         <a class="nav-item nav-link" href="/profile">{{user.username}}</a>
         <a class="nav-item nav-link" href="/logout">Logout</a>
