added update profile preferred languages and location

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -10,7 +10,7 @@
   {{data}}
 </div>
 
-    <div class="card-deck">
+    {{!-- <div class="card-deck">
       <div class="card">
         <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
         <div class="avatar">
@@ -42,17 +42,13 @@
           </div>
         </div>
 
-      </div>
+      </div> --}}
 
 
     </div>
   </div>
-<<<<<<< HEAD
-=======
-
   <h3>Search Results</h3>
   <div class="userResult">
->>>>>>> c6742609d42c8bc22db9db6368c4160e309ee043
 
   </div>
 
