--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -9,15 +9,20 @@
                     <img src="/assets/img/dayah.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <p>Web Developer <br>
+                    <p>{{user.acceptedPearing}}<br>
                        More description here</p>
                     <button type="button" class="btn btn-default">Pending</button>
                     <button type="button" class="btn btn-default">Cancel</button>
                 </div>
             </div>
           </div>
+          <input id="pendingInput" type="text">
+          <h3>Search Results</h3>
+          <div class="pendingResult">
 
-          <div class="col-sm-3">
+          </div>
+
+          {{!-- <div class="col-sm-3">
               <div class="card ">
                   <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
                   <div class="avatar">
@@ -29,8 +34,8 @@
                       <button type="button" class="btn btn-default">Chat!</button>
                       <button type="button" class="btn btn-default">Cancel</button>
                   </div>
-              </div>
-            
+              </div> --}}
+
 
 
     {{!-- <div class="col-3">
