--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,5 @@
 <div class="container">
-
-  <br>
-
+<br>
 <div class ="icon-profile">
   <div class ="container">
     <div class="row">
@@ -11,12 +9,10 @@
     <div class="row">
       <div class="col-sm">
         <div class="tile">
-          <h3 class="tile-title">
-            Languages
-          </h3>
+          <h3 class="tile-title">Languages</h3>
           <div class="container ">
             {{#each user.languages}}
-            <p><i class="icon-size devicon-{{lang}}-plain colored"> {{kyu}} kyu</i></p>
+              <p><i class="icon-size devicon-{{lang}}-plain colored"> {{kyu}} kyu</i></p>
             {{/each}}
           </div>
         </div>
@@ -26,24 +22,22 @@
           <h3 class="tile-title">
             {{ user.username }}
           </h3>
-          <p>Codewars Rank</p>
-          <p>Honor : {{ user.honor }}</p>
-          <p>Overall Kyu : {{ user.overallKyu }}</p>
-          <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
+            <p>Codewars Rank</p>
+            <p>Honor : {{ user.honor }}</p>
+            <p>Overall Kyu : {{ user.overallKyu }}</p>
+            <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
         </div>
       </div>
       <div class="col-sm">
         <div class="tile">
-        <h5>{{user.location}} Area</h5>
+          <h5>{{user.location}} Area</h5>
         </div>
         <div class="tile">
-          <h3 class="tile-title">
-            Code with me
-          </h3>
-          <p>{{ user.codewith }}</p>
+          <h5>{{user.preferredLanguage}}</h5>
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-sm">
         <div class="tile">
@@ -55,68 +49,72 @@
           </div>
         </div>
       </div>
+      <div class="col-sm">
+        <div class="tile">
+          <h3 class="tile-title">
+            Code with me :
+          </h3>
+          <div class="container ">
+            <p>{{ user.codewith }}</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-<div class ="container icon-profile">
 
   <form action="/profile/{{ user.id }}?_method=PUT" method="post">
-
+    <div class="form-group" >
+      <label for="exampleFormControlSelect1">Select Area</label>
+      <select class="form-control" type="text" name="preferredLanguage" value="{{ user.preferredLanguage }}" id="exampleFormControlSelect1">
+        {{#each user.languages}}
+        <option>{{lang}}</option>
+        {{/each}}
+      </select>
+    </div>
+    <div class="form-group" >
+      <label for="exampleFormControlSelect1">Select Area</label>
+      <select class="form-control" type="text" name="location" value="{{ user.location }}" id="exampleFormControlSelect1">
+      <option>Central</option>
+      <option>North</option>
+      <option>South</option>
+      <option>East</option>
+      <option>West</option>
+      </select>
+    </div>
+    <br>
+    <br>
     <input type="hidden" name="slug" value="{{ user.username }}">
-
     <label for="aboutme">My Story:</label><br>
-    <input type="text" class="form-control" rows="3" cols="80" name="about" value="{{ user.about }}">
-    <small id="emailHelp" class="form-text text-muted">Write something about yourself, others will get to know you better.</small>
+      <input type="text" class="form-control" rows="3" cols="80" name="about" value="{{ user.about }}">
+      <small id="emailHelp" class="form-text text-muted">Write something about yourself, others will get to know you better.</small>
     <br>
     <br>
     <label for="codewith">Let people know about your available time and days :</label><br>
-    <input type="text" class="form-control" rows="3" cols="80" name="codewith" value="{{ user.codewith }}">
-    <small id="emailHelp" class="form-text text-muted">Let people know more about your available time, days and exact location.</small>
+      <input type="text" class="form-control" rows="3" cols="80" name="codewith" value="{{ user.codewith }}">
+      <small id="emailHelp" class="form-text text-muted">Let people know more about your available time, days and exact location.</small>
+    <br>
+      <label for="image">Change Profile Photo:</label><br>
+      <input type="text" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" value="{{user.imageUrl}}">
+      {{ user.imageUrl }}
     <br>
     <br>
-    <div class="form-group" >
-  <label for="exampleFormControlSelect1">Select Area</label>
-  <select class="form-control" type="text" name="location" value="{{ user.location }}" id="exampleFormControlSelect1">
-    <option>Central</option>
-    <option>North</option>
-    <option>South</option>
-    <option>East</option>
-    <option>West</option>
-  </select>
-</div>
-
-
-<label for="image">Change Profile Photo:</label><br>
-<input type="text" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" value="{{user.imageUrl}}">
-{{ user.imageUrl }}
-  <br>
+      <label for="email">Update Email address</label><br>
+      <input type="text" class="form-control" name="email" value="{{ user.email }}">
     <br>
-
-    <label for="email">Update Email address</label><br>
-    <input type="text" class="form-control" name="email" value="{{ user.email }}">
-      <br>
     <br>
-
     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
       <i class="material-icons right"></i>
     </button>
-
   </form>
 
-</div>
 
-  <div class ="container icon-profile">
   <h5>Delete Profile</h5>
-
   <form action="/profile/{{ user.id }}?_method=DELETE" method="post">
-
     <button class="btn waves-effect waves-light" type="submit" name="action">Delete
       <i class="material-icons right"></i>
     </button>
-
   </form>
-
   <br>
   <br>
 </div>
