--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,14 +1,14 @@
 <div class="icon-profile">
 <div class="container">
 
-  <h3>Search Pear</h3>
-  <input id="searchInput" type="text">
+  {{!-- <h3>Search Pear</h3> --}}
+  {{!-- <input id="searchInput" type="text"> --}}
 
 <br>
 <br>
 
-    <div class="card-deck">
-      <div class="card">
+    {{!-- <div class="card-deck"> --}}
+      {{!-- <div class="card">
         <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
         <div class="avatar">
           <img src="/assets/img/dayah.jpg" alt="" />
@@ -20,24 +20,17 @@
           {{/each}}
           <p class="card-text">Area : {{user.location}}</p>
           <p class="card-text"><small class="text-muted">{{user.codewith}}</small></p>
-          <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-            More Information
-          </a>
+          <p>Codewars Rank</p>
+          <p>Honor : {{ user.honor }}</p>
+          <p>Overall Kyu : {{ user.overallKyu }}</p>
+          <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
+          <p>{{ user.about }}</p>
+          <p>{{ user.codewith }}</p>
         </div>
 
-          <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              <p>Codewars Rank</p>
-              <p>Honor : {{ user.honor }}</p>
-              <p>Overall Kyu : {{ user.overallKyu }}</p>
-              <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
-              <p>{{ user.about }}</p>
-              <p>{{ user.codewith }}</p>
-            </div>
-          </div>
-        </div>
+        </div> --}}
 
-        <div class="card">
+      {{!-- <div class="card">
           <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
           <div class="avatar">
             <img src="/assets/img/dayah.jpg" alt="" />
@@ -69,12 +62,15 @@
 
 
     </div>
-  </div>
+  </div> --}}
 
   <h3>Search Results</h3>
+
   <div class="userResult">
 
   </div>
 
 
+
+</div>
 </div>
