--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,19 @@
+/*
+#chat form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+#chat form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+#chat form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+#messages { list-style-type: none; margin: 0; padding: 0; }
+#messages li { padding: 5px 10px; }
+#messages li:nth-child(odd) { background: #eee; }
+#messages { margin-bottom: 40px }*/
+
+form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #eee; }
+
 body {
   display: flex;
   /*min-height: 100vh;*/
@@ -162,6 +178,8 @@ footer.page-footer {
   border-radius: 50%;
   border: 5px solid rgba(0,0,30,0.8);
 }
+
+
 
 
  /**/
