--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,21 +1,4 @@
-<style>
-  * { font-family:tahoma; font-size:12px; padding:0px;margin:0px;}
-  p { line-height:18px; }
-  div { width:500px; margin-left:auto; margin-right:auto;}
-  #content { padding:5px; background:#ddd; border-radius:5px;
-      overflow-y: scroll; border:1px solid #CCC;
-      margin-top:10px; height: 160px; }
-  #input { border-radius:2px; border:1px solid #ccc;
-      margin-top:10px; padding:5px; width:400px;
-  }
-  #status { width:88px;display:block;float:left;margin-top:15px; }
-</style>
-
-<div id="content"></div>
-<div>
-  <span id="status">Connecting...</span>
-  <input type="text" id="input" disabled="disabled" />
-</div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
-</script>
-<script src="./frontend.js"></script>
+<ul id="message"></ul>
+<form id="chat" action="">
+  <input id="m" autocomplete="off" /><button>Send</button>
+</form>
