--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,6 @@
   <!--Import materialize.css-->
   {{!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet"/> --}}
 
-  <script>
-    UPLOADCARE_PUBLIC_KEY = "f2d9934e84f8b4f58c92"
-  </script>
-
-  <script src="https://ucarecdn.com/libs/widget/3.1.4/uploadcare.full.min.js" charset="utf-8"></script>
-
 </head>
 
 <body>
@@ -81,8 +75,14 @@
 
     {{!-- ---------------------------------------------------------------- --}}
 
-    <!--Import jQuery before materialize.js-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script>
+      UPLOADCARE_PUBLIC_KEY = "f2d9934e84f8b4f58c92"
+    </script>
+
+    <script src="https://ucarecdn.com/libs/widget/3.1.4/uploadcare.full.min.js" charset="utf-8"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+
     {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> --}}
     <script src="/assets/js/flat-ui.js"></script>
     <script src="/assets/js/flat-ui.min.js"></script>
@@ -90,6 +90,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    {{!-- <script src="https://code.jquery.com/jquery-1.11.1.js"></script> --}}
+    {{!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> --}}
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/assets/js/frontend.js"></script>
 </body>
 
