--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,23 @@
-<div class="container">
-<h2>Login</h2>
 
+<div class="container" id="registerForm">
+<div class="icon-profile" id="registerLabels">
+<h2>Login</h2>
+  <br>
+    <br>
 <form class="col s12 m6" action="/login" method="post">
 
   <label for="email">Email</label>
-  <input type="email" name="user[email]" placeholder="e.g. domain@email.com" class="black-text">
-
+  <input type="email" name="user[email]" placeholder="e.g. domain@email.com" class="form-control">
+  <br>
   <label for="password">Password</label>
-  <input type="password" name="user[password]" placeholder="Password here" class="black-text">
-
-  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right"></i>
-  </button>
+  <input type="password" name="user[password]" placeholder="Password here" class="form-control">
+  <br>
+  <br>
+<button class="btn btn-block btn-lg btn-primary" type="submit" name="action">Submit</button>
 
 </form>
 
 <br>
 <br>
-
+</div>
 </div>
