--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,29 +2,24 @@
   <div class="section no-pad-bot hero-div">
     <div class ="container">
       <div class="row">
-        <div class="col-sm">
-          <h2>Find your pear!</h2>
-          <p>
-            Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there isn't amny opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location, chat, and set a date to learn together.
-          </p>
+        <div class="col-sm d-flex align-items-center">
+          <div>
+            <h2>Find your pear!</h2>
+            <p>
+              Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there aren't many opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location, chat, and set a date to learn together.
+            </p>
+          </div>
         </div>
-        {{!-- <div class="col-sm">
-          <img src="/assets/img/pear-outline-filled.png" width="100px" />
-        </div> --}}
+        <div class="col-sm">
+          <img src="/assets/img/569.jpg" width="400px" />
+        </div>
       </div>
     </div>
   </div>
-    {{!-- <div class="container">
-      <br><br>
-      <h3 class="header center teal-text text-lighten-2">Find your pear</h3>
-      {{!-- <br><br> --}}
-      {{!-- <div class="parallax"><img src="/assets/img/banner-home.png" ></div> --}}
-      {{!-- <br><br>
-      <button type="button" class="btn btn-info">Info</button>
-      <br><br>
-      </div> --}}
 
-      <div class="container how-to-use">
+
+<div class="section no-pad-bot how-to-use">
+      <div class="container">
         <div class="row">
           <div class="col-sm">
             <div class="tile">
@@ -51,7 +46,28 @@
           </div>
           </div>
         </div>
+        <a class="btn btn-block btn-lg btn-primary" href="/register">Sign up now!</a>
       </div>
+    </div>
+
+    <div class="section no-pad-bot codewar-div">
+      <div class ="container">
+        <div class="row">
+          <div class="col-sm d-flex align-items-center">
+            <div class="col-sm">
+              <img src="/assets/img/codewars.png" width="400px" padding="20px" />
+            </div>
+              <div class="col-sm">
+              <h2>Before signing up..</h2>
+              <p>
+                You are required to sign up under codewars so that you can find people with similar levels in our Pear Programming platform.
+              </p>
+              <a class="btn btn-primary" href="https://www.codewars.com/">Codewar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   {{!-- </div>
