--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,14 +63,13 @@
       <div class="container">
         <div class="row">
           <div class="col xl7 l7 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h4 class="white-text">Pear Programming</h4>
+            <p class="grey-text text-lighten-4">By Shui, Charmaine, Hidayah, William</p>
           </div>
           <div class="justify-content-end">
-            <h5 class="white-text">Links</h5>
+            <h4 class="white-text">Links</h4>
             <ul class="nav">
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><img src="/assets/img/github-logo.svg" width="50px"><a class="grey-text text-lighten-3" href="https://github.com/charlimxm/project-4">Github</a></li>
             </ul>
           </div>
         </div>
