fixed submit button

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -30,7 +30,7 @@
 
   <br>
   <br>
-  <button class="btn btn-block btn-lg btn-primary" type="submit" name="action">Submit</button>
+  <button class="btn btn-block btn-lg btn-primary" type="submit" name="action" value="Submit">Submit</button>
 
 </form>
 </div>
