--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,6 +3,7 @@
 <div class ="icon-profile">
   <div class ="container">
     <div class="row">
+      {{person.username}}
       <img src = "{{ user.imageUrl }}" class="img-thumbnail" max-height="200px">
     </div>
     <br>
