--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,4 @@
 <div class="container">
-<br>
 <div class ="icon-profile">
   <div class ="container">
     <div class="row">
@@ -62,7 +61,7 @@
     </div>
   </div>
 
-
+<div id="profile">
   <form action="/profile/{{ user.id }}?_method=PUT" method="post">
     <div class="form-group" >
       <label for="exampleFormControlSelect1">Select Area</label>
@@ -103,19 +102,18 @@
       <input type="text" class="form-control" name="email" value="{{ user.email }}">
     <br>
     <br>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-      <i class="material-icons right"></i>
-    </button>
+    <button class="btn btn-block btn-lg btn-primary" type="submit" name="action" value="Submit">Submit</button>
   </form>
-
-
-  <h5>Delete Profile</h5>
-  <form action="/profile/{{ user.id }}?_method=DELETE" method="post">
-    <button class="btn waves-effect waves-light" type="submit" name="action">Delete
-      <i class="material-icons right"></i>
-    </button>
-  </form>
+    <br>
+    <br>
+    <br>
+  <div id="delete">
+    <h5>Delete Profile</h5>
+    <form action="/profile/{{ user.id }}?_method=DELETE" method="post">
+      <button class="btn btn-lg btn-primary" type="submit" name="action" value="Submit">DELETE</button>
+    </form>
+  </div>
   <br>
-  <br>
+</div>
 </div>
 </div>
