--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,8 +3,7 @@
 <div class ="icon-profile">
   <div class ="container">
     <div class="row">
-      {{person.username}}
-      <img src = "{{ user.imageUrl }}" class="img-thumbnail" max-height="200px">
+      <img src = "{{ person.imageUrl }}" class="img-thumbnail" max-height="200px">
     </div>
     <br>
     <div class="row">
@@ -12,7 +11,7 @@
         <div class="tile">
           <h3 class="tile-title">Languages</h3>
           <div class="container ">
-            {{#each user.languages}}
+            {{#each person.languages}}
               <p><i class="icon-size devicon-{{lang}}-plain colored"> {{kyu}} kyu</i></p>
             {{/each}}
           </div>
@@ -21,20 +20,20 @@
       <div class="col-sm">
         <div class="tile">
           <h3 class="tile-title">
-            {{ user.username }}
+            {{person.username}}
           </h3>
             <p>Codewars Rank</p>
-            <p>Honor : {{ user.honor }}</p>
-            <p>Overall Kyu : {{ user.overallKyu }}</p>
-            <p>Leaderboard Position : {{ user.leaderboardPosition }}</p>
+            <p>Honor : {{ person.honor }}</p>
+            <p>Overall Kyu : {{ person.overallKyu }}</p>
+            <p>Leaderboard Position : {{ person.leaderboardPosition }}</p>
         </div>
       </div>
       <div class="col-sm">
         <div class="tile">
-          <h5>{{user.location}} Area</h5>
+          <h5>{{person.location}} Area</h5>
         </div>
         <div class="tile">
-          <h5>{{user.preferredLanguage}}</h5>
+          <h5>{{person.preferredLanguage}}</h5>
         </div>
       </div>
     </div>
@@ -46,7 +45,7 @@
             My Story :
           </h3>
           <div class="container ">
-            <p>{{ user.about }}</p>
+            <p>{{ person.about }}</p>
           </div>
         </div>
       </div>
@@ -56,13 +55,14 @@
             Code with me :
           </h3>
           <div class="container ">
-            <p>{{ user.codewith }}</p>
+            <p>{{ person.codewith }}</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+{{#equal user.username person.username}}
 
   <form action="/profile/{{ user.id }}?_method=PUT" method="post">
     <div class="form-group" >
@@ -118,5 +118,7 @@
   </form>
   <br>
   <br>
+
+  {{/equal}}
 </div>
 </div>
